--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,11 @@ img {
 
 .header {
   border-bottom: 1px solid #E7E9FC;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .header-box {
   justify-content:space-between;
+  align-items: center;
 }
 
 .header-logo {
@@ -106,7 +105,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   display: block;
-  padding: 24px auto;
+  padding: 24px 0;
   position: relative;
 }
 
@@ -117,6 +116,9 @@ img {
   height: 4px;
   background-color: #404BBF;
   border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 }
 
 .header-address {
@@ -135,6 +137,10 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.active {
+  transition: color var(--timing-cubic);
 }
 
 .active:hover,
@@ -174,12 +180,11 @@ img {
   padding: 16px 32px;
   gap: 10px;
   border: 0px solid transparent;
-  transition: color var(--timing-cubic), background-color var(--timing-cubic);
+  transition: background-color var(--timing-cubic);
 }
 
 .active-btn:hover,
 .active-btn:active {
-  color: var(--hero-title-buttons);
   background-color: var(--hover-color);
 }
 
@@ -325,15 +330,17 @@ img {
   justify-content: space-between;
 }
 
+.customers-li {
+  flex-basis: calc((100% - 120px) / 6);
+}
+
 .customers-item{
-  border: 1px solid var(--border);
+  border: 1px solid #8E8F99;
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 168px;
   height: 88px;
-  fill: var(--border);
   transition: fill var(--timing-cubic), border var(--timing-cubic);
 }
 
@@ -341,6 +348,10 @@ img {
 .customers-item:focus {
   fill: var(--hover-color);
   border: 1px solid var(--hover-color);
+}
+
+.customers-icon {
+  fill: currentColor;
 }
 
 /* second page */
