--- a/css/styles.css
+++ b/css/styles.css
@@ -487,13 +487,13 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  transform: translate(0, 100%);
   transition: transform var(--timing-cubic);
- /* overflow: auto; */
+  transform: translate(0, 100%);
+  overflow-y: auto;
   color: #F4F4FD;
   background: #4D5AE5;
   mix-blend-mode: normal;
-  padding: 40px 32px 164px;
+  padding: 40px 32px;
 }
 
 .overlay-img:hover .overlay,
@@ -541,6 +541,10 @@ img {
   pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.2);
+}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -551,6 +555,7 @@ img {
   background-color: #FCFCFC;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transtorm var(--timing-cubic);
 }
 
 .modal-btn {
